# Agent-Demo

./: .gitignore  REPORT.md  applied_modules_report.tex  appointments.json  claude.tex  clinics_rooms.json  data_loader.py  doctors.json  fastapi_webapp_plan.xml  hospital_agent_plan.xml  hospital_guidelines.txt  implemented_modules.tex  main.py  patient_logs.jsonl  pyproject.toml  python.tex  rag_searcher.py  recommender.py  refactor_plan.xml  services.json  test_requests.jsonl  test_run.sh  tools.py
data/: appointments.json
src/app/: main.py
src/app/api/: chat_manager.py  server.py
src/app/cli/: batch_processor.py  computer_use_sandbox.py
src/app/core/: ai_factory.py  config.py  logger.py
src/app/repositories/: appointment.py  base.py  clinic.py  doctor.py  document.py  service.py
src/app/services/: booking.py  document.py  facility.py  recommender.py  web_search.py
src/app/static/: index.html  script.js  style.css
tests/unit/: test_booking_service.py  test_facility_service.py
