[project]
name = "hospital-ai-agent"
version = "0.1.0"
description = "Hospital AI Agent using Google Gemini"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai",
    "pillow",
    "pydantic-settings"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pyright]
extraPaths = ["."]
executionEnvironments = [
  { root = "." }
]
venvPath = "."
venv = ".venv"
